--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,3 +28,4 @@ dependencies {
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
     compile 'github.hellocsl:CursorWheelLayout:1.1.0'
 }
+apply plugin: 'com.google.gms.google-services'
