--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,6 +21,7 @@
         <activity android:name=".News_Activity" />
         <activity android:name=".Investment_Guide_Activity" />
         <activity android:name=".Contact_Activity" />
+        <activity android:name=".Settings_Activity" />
     </application>
 
 </manifest>
