--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,6 +28,6 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
-    compile 'github.hellocsl:CursorWheelLayout:1.1.0'
+    compile 'com.ogaclejapan.arclayout:library:1.1.0@aar'
 }
 apply plugin: 'com.google.gms.google-services'
