--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,5 +29,7 @@ dependencies {
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
     compile 'com.ogaclejapan.arclayout:library:1.1.0@aar'
+    compile 'com.android.support:design:26.1.0'
+
 }
 apply plugin: 'com.google.gms.google-services'
