--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,6 +32,7 @@ dependencies {
     compile 'com.ogaclejapan.arclayout:library:1.1.0@aar'
     compile 'com.android.support:design:26.1.0'
     compile "com.andkulikov:transitionseverywhere:1.7.8"
+    compile 'com.unstoppable:submitbutton:1.1.3'
 
 }
 apply plugin: 'com.google.gms.google-services'
