--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,7 +20,8 @@
         </activity>
         <activity android:name=".News_Activity" />
         <activity android:name=".Investment_Guide_Activity" />
-        <activity android:name=".Contact_Activity" />
+        <activity android:name=".Info_Activity"
+            android:windowSoftInputMode="adjustPan"/>
         <activity android:name=".Settings_Activity" />
     </application>
 
